# autonomous-development

./: .autodev-dashboard-url  .autodev-swarm-checkpoint.json  .autodev-swarm-learnings.md  .autodev-swarm-report.md  .autodev-swarm-state.json  .gitignore  BACKLOG.md  BACKLOG_AMBITION.md  BACKLOG_DOGFOOD.md  CLAUDE.md  Dockerfile.worker  KNOWN_ISSUES.md  LICENSE  MISSION_STATE.md  Makefile  README.md  autodev.toml  docker-compose.yml  mission-control.toml  mission_report.json  pyproject.toml
.claude-project/research/: goal-md-format.md  stream-json-design.md
.claude/skills/create-tool/: SKILL.md
.claude/skills/discover-peers/: SKILL.md
docs/: program.md
docs/superpowers/research/: tool-call-tracking-implementation-guide.md
docs/superpowers/specs/: 2026-03-12-capability-awareness-auto-update-design.md  2026-03-12-safety-rails-shared-compute-trace-review-design.md  2026-03-12-swarm-observability-robustness-design.md  2026-03-15-tool-call-tracking-design.md  auto-2026-03-14-adapt-new-mcp-server-for-autonomous-coding.md  auto-2026-03-16-research-entire-io-s-api-sdk-for-potential-integration-as-a-.md  auto-2026-03-17-evaluate-mcpso-as-a-data-source-for-mcp-registry-py-auto-dis.md  auto-2026-03-17-evaluate-the-context-mode-mcp-server-for-integration-into-au.md  auto-2026-03-17-integrate-gitmcp-as-a-tool-for-worker-agents-during-research.md  auto-2026-03-17-review-cowork-s-architecture-for-patterns-applicable-to-auto.md  auto-2026-03-17-review-the-blog-post-for-planning-execution-separation-patte.md  auto-2026-03-17-review-the-guide-for-agent-design-patterns-tool-use-orchestr.md  auto-2026-03-18-adapt-show-hn-goal-md-a-goal-specification-file-for-autonomo.md  auto-2026-03-19-evaluate-entire-cli-as-a-git-hook-integration-for-worker-age.md  auto-2026-03-21-research-opencode-s-architecture-for-reusable-patterns-how-i.md  auto-2026-03-24-research-cursor-s-scaling-patterns-checkpoint-resume-resourc.md  cowork-cli-audit.md
scripts/: run-auto-update.sh  run-mission.sh  run-swarm-daemon.sh
src/autodev/: auto_update.py  batch_analyzer.py  cli.py  config.py  context_gathering.py  continuous_planner.py  contrib.py  core_tests.py  critic_agent.py  db.py  deliberative_planner.py  feedback.py  memory.py  metrics.py  notifier.py  oracle.py  prompt_evolution.py  ratchet.py  recursive_planner.py  scheduler.py  session.py  trace_review.py
src/autodev/auth/: __init__.py  browser.py  vault.py
src/autodev/dashboard/: provider.py
src/autodev/intelligence/: llm_evaluator.py  models.py  scanner.py  sources.py  spec_generator.py  utils.py  web_sources.py
src/autodev/swarm/: __init__.py  budget.py  circuit_breaker.py  context.py  controller.py  learnings.py  models.py  planner.py  prompts.py  stagnation.py  tui.py  worker_prompt.py
src/mission_control/: __init__.py  __main__.py  a2a.py  adaptive_concurrency.py  auto_discovery.py  backlog_manager.py  batch_analyzer.py  causal.py  circuit_breaker.py  cli.py  config.py  constants.py  context_gathering.py  continuous_controller.py  continuous_planner.py  coordinator.py  core_tests.py  criteria_validator.py  critic_agent.py  db.py  degradation.py  deliberative_planner.py  diagnose.py  diff_reviewer.py  discovery.py  ema.py  evaluator.py  event_stream.py  feedback.py  grading.py  green_branch.py  heartbeat.py  hitl.py  json_utils.py  launcher.py  mcp_registry.py  mcp_server.py  memory.py  merge_queue.py  metrics.py  (+25 more)
src/mission_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mission_control/backends/: __init__.py  base.py  container.py  local.py  ssh.py
src/mission_control/dashboard/: __init__.py  live.py  live_ui.html  provider.py  tui.py
src/mission_control/dashboard/web/: __init__.py  server.py
src/mission_control/dashboard/web/static/: dashboard.css  dashboard.js
src/mission_control/dashboard/web/templates/: index.html  layout.html  overview.html  project_dashboard.html
src/mission_control/dashboard/web/templates/partials/: activity_log.html  continuous_status.html  discoveries_feed.html  event_timeline.html  live_status.html  log_tail.html  merge_queue.html  mission_header.html  round_detail.html  round_timeline.html  tab_bar.html  toast.html  unit_detail.html  work_units.html  worker_pool.html
src/mission_control/dashboard/web/templates/wizard/: step1_project.html  step2_objective.html  step3_configure.html  step4_review.html
src/mission_control/intelligence/: __init__.py  evaluator.py  models.py  scanner.py  sources.py
src/mission_control/specialist_templates/: debugger.md  refactorer.md  simplifier.md  test-writer.md
tests/: conftest.py  test_adaptive_concurrency.py  test_ambition_scoring.py  test_auto_discovery.py  test_auto_update.py  test_backends.py  test_backlog.py  test_backlog_continuity.py  test_backlog_intake.py  test_backlog_manager.py  test_batch_analyzer.py  test_browser.py  test_causal.py  test_circuit_breaker.py  test_cleanup_cycle.py  test_cli.py  test_cli_goal.py  test_cli_priority.py  test_config.py  test_config_planning.py  test_constants.py  test_container_backend.py  test_context_gathering.py  test_continuous_controller.py  test_continuous_feedback.py  test_continuous_foundation.py  test_continuous_planner.py  test_contrib.py  test_controller_auth.py  test_coordinator.py  test_criteria_validator.py  test_critic_agent.py  test_dag_planner.py  test_dashboard.py  test_dashboard_provider.py  test_db.py  test_db_lock_hygiene.py  test_degradation.py  test_degradation_budget.py  test_deliberative_planner.py  (+104 more)
