[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-control"
version = "0.1.0"
description = "Long-running autonomous development framework for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = []
keywords = ["claude", "autonomous", "development", "scheduler"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]

dependencies = [
	"tomli>=2.0.0;python_version<'3.11'",
	"httpx>=0.27.0",
	"pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
	"pytest>=7.0.0",
	"pytest-asyncio>=0.21.0",
	"pytest-cov>=4.0.0",
	"ruff>=0.1.0",
	"mypy>=1.0.0",
	"bandit>=1.7.0",
]
dashboard = [
	"textual>=0.47.0",
	"fastapi>=0.109.0",
	"uvicorn[standard]>=0.27.0",
]
mcp = [
	"mcp[cli]>=1.0.0",
]
tracing = [
	"opentelemetry-api>=1.20.0",
	"opentelemetry-sdk>=1.20.0",
]

[project.scripts]
mc = "mission_control.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["W191", "E101"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mission_control --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src/mission_control"]
omit = [
	"src/mission_control/dashboard/templates/*",
	"src/mission_control/dashboard/static/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
	"pragma: no cover",
	"if __name__ == .__main__.",
	"if TYPE_CHECKING:",
	"raise NotImplementedError",
	"pass",
	"\\.\\.\\.",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0.0",
]
