[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-dev"
version = "0.1.0"
description = "Autonomous development daemon that continuously improves codebases using parallel Claude Code workers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Danny Willow Liu"}]
keywords = ["ai-agent", "code-generation", "mcp", "claude", "autonomous", "development"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Software Development",
	"Topic :: Software Development :: Code Generators",
	"Typing :: Typed",
]

dependencies = [
	"httpx>=0.27.0",
	"pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/dannywillowliu-uchi/autonomous-development"
Repository = "https://github.com/dannywillowliu-uchi/autonomous-development"
Issues = "https://github.com/dannywillowliu-uchi/autonomous-development/issues"

[project.optional-dependencies]
dev = [
	"pytest>=7.0.0",
	"pytest-asyncio>=0.21.0",
	"ruff>=0.1.0",
	"mypy>=1.0.0",
	"bandit>=1.7.0",
	"fastapi>=0.109.0",
	"uvicorn[standard]>=0.27.0",
]
dashboard = [
	"textual>=0.47.0",
	"fastapi>=0.109.0",
	"uvicorn[standard]>=0.27.0",
]
mcp = [
	"mcp[cli]>=1.0.0",
]
auth = [
	"playwright>=1.40.0",
]
browser = [
	"playwright>=1.40.0",
]
tracing = [
	"opentelemetry-api>=1.20.0",
	"opentelemetry-sdk>=1.20.0",
]

[project.scripts]
autodev = "autodev.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["W191", "E101"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ""
